Se agrega toast para mensajes de error

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,10 @@ p {
 }
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
