--- a/src/app/components/toast/toast.component.html
+++ b/src/app/components/toast/toast.component.html
@@ -1,6 +1,9 @@
 @for (toast of toastService.toasts(); track toast) {
   <ngb-toast
-    [header]="toast.header" [autohide]="true" [delay]="toast.delay || 5000"
+    [autohide]="true" 
+    [delay]="toast.delay || 5000"
     (hidden)="toastService.remove(toast)"
-  >{{ toast.body }}</ngb-toast>
+  >
+    {{ toast.body }}
+  </ngb-toast>
 }
