--- a/src/app/components/toast/toast.component.scss
+++ b/src/app/components/toast/toast.component.scss
@@ -1,7 +1,16 @@
 :host {
   position: fixed;
-  top: 8%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  inset: 0; /* top: 0; right: 0; bottom: 0; left: 0; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   z-index: 1200;
+  pointer-events: none; /* 🔥 Permite clics en otros elementos */
+}
+
+.toast {
+  margin-top: 10px;
+  background-color: rgb(253, 73, 73);
+  color: #fff;
 }
