--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -14,7 +14,7 @@
   </button>
 
   @if(!products().length) {
-    <div class="w-100 border border-2 rounded-4 p-3 p-md-5 text-center">
+    <div class="w-100 border border-2 rounded-4 p-3 py-md-5 text-center">
       <i class="fa-solid fa-box-open fs-1 mb-2"></i>
       <h5 class="m-0">Aún no hay productos agregados</h5>
       <small class="text-secondary">Crea uno para comenzar</small>
